--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -5,7 +5,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'meeting/css/main.css' %}" media="screen">
+    <link rel="stylesheet" href="{% static 'meeting/css/main.css' %}?after" media="screen">
 {% endblock %}
 
 
@@ -31,28 +31,45 @@
                   </div>
             </div>
           </div>
-          
-
 
             <div class="list-container" id="list-container">
-              <div class="create-meeting">
-                <a class="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
-              </div>
+                <div class="create-meeting">
+                    <a class="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
+                </div>
                 <div id="list-items">
                     {% for meeting in meetings %}
-                        <div class="list-item" onclick="toggleDetails('{{ meeting.id }}')">
+                        <div class="list-item" onclick="toggleDetails1('{{ meeting.id }}')">
                             <span class="list-item-title">{{ meeting.title }}</span>
                             <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }}<br>{{ meeting.host }}</span>
                         </div>
                     {% endfor %}
+
+
+
                 </div>
             </div>
             <div class="details-container" id="details">
                 <h3 id="details-title">{{ meeting.title }}</h3>
                 <p id="details-content">Select an item from the list to see more details here.</p>
             </div>
-          </div>
-    </div>
+
+            <!--Modal-->
+                        <div class="modal fade" id="contentDetail">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title">{{ meeting.title }} 전문 보기</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body" id="modalBody">
+                                {{ meeting.content }}
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+        </div>
+
+
 
 {% endblock %}
 
@@ -60,12 +77,12 @@
     <script>
       let currentItem = null;
 
-      function toggleDetails(meeting_id) {
+      function toggleDetails1(meeting_id) {
         const listContainer = document.getElementById('list-container');
         const detailsContainer = document.getElementById('details');
-        const detailsTitle = document.getElementById('details-title');
         const detailsContent = document.getElementById('details-content');
-        const detailsInfo = document.getElementById('details-info');
+        const modalTitle = document.querySelector('#contentDetail .modal-title');
+        const modalBody = document.querySelector('#contentDetail .modal-body');
 
         if (currentItem === meeting_id) {
           // Hide the details if the same item is clicked again
@@ -77,15 +94,20 @@
           fetch(`/meeting_summary/${meeting_id}/`)
             .then(response => response.text())
             .then(html => {
-              // Show the details of the selected item
-              detailsContent.innerHTML = html;
-              detailsContainer.classList.add('open');
-              listContainer.classList.add('split-view');
-              currentItem = meeting_id;
+                // Show the details of the selected item
+                detailsContent.innerHTML = html;
+                detailsContainer.classList.add('open');
+                listContainer.classList.add('split-view');
+                currentItem = meeting_id;
             });
+          fetch(`/meeting_detail/${meeting_id}/`)
+              .then(response => response.text())
+              .then(html => {
+                  modalTitle.textContent = `전문 보기`;  // 예: meeting_id를 제목에 포함
+                  modalBody.innerHTML = html; // 서버에서 가져온 회의 내용을 모달 본문에 삽입
+              });
         }
       }
-
 
         $("#search-title").click(function () {
           const query = prompt("검색할 제목을 입력하세요:");
@@ -126,6 +148,8 @@
               .append("<div>요약문 검색 결과: " + query + "</div>");
           }
         });
+
+
 
     </script>
 {% endblock %}
