--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -4,144 +4,137 @@
 {% block title %}- Main{% endblock %}
 
 {% block css %}
-    {{ block.super }}
-    <link rel="stylesheet" href="{% static 'meeting/css/main.css' %}?after" media="screen">
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'meeting/css/main.css' %}?after" media="screen">
+<link rel="stylesheet" href="{% static 'meeting/css/meeting.css' %}?after">
 {% endblock %}
 
 
 {% block contents %}
-        <div class="meeting-list">
-          <div class="d-flex justify-content-between align-items-center mb-3">
-            <div class="dropdown">
-              <button
-                class="btn btn-light dropdown-toggle"
-                type="button"
-                id="dropdownMenuButton"
-                data-bs-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                제목
-              </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#" id="search-title">제목</a>
-                    <a class="dropdown-item" href="#" id="search-author">작성자</a>
-                    <a class="dropdown-item" href="#" id="search-date">날짜</a>
-                    <a class="dropdown-item" href="#" id="search-summary">요약문</a>
-                  </div>
-            </div>
-          </div>
+<div class="meeting-list">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <div class="dropdown">
+      <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        제목
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#" id="search-title">제목</a>
+        <a class="dropdown-item" href="#" id="search-author">작성자</a>
+        <a class="dropdown-item" href="#" id="search-date">날짜</a>
+        <a class="dropdown-item" href="#" id="search-summary">요약문</a>
+      </div>
+    </div>
+  </div>
 
-            <div class="list-container" id="list-container">
-                <div class="create-meeting">
-                    <a class="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
-                </div>
-                <div id="list-items">
-                    {% for meeting in meetings %}
-                        <div class="list-item" onclick="toggleDetails1('{{ meeting.id }}')">
-                            <span class="list-item-title">{{ meeting.title }}</span>
-                            <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }}<br>{{ meeting.host }}</span>
-                        </div>
-                    {% endfor %}
+  <div class="list-container" id="list-container">
+    <div class="create-meeting">
+      <a class="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
+    </div>
+    <div id="list-items">
+      {% for meeting in meetings %}
+      <div class="list-item" onclick="toggleDetails1('{{ meeting.id }}')">
+        <span class="list-item-title">{{ meeting.title }}</span>
+        <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }}<br>{{ meeting.host }}</span>
+      </div>
+      {% endfor %}
 
 
 
-                </div>
-            </div>
-            <div class="details-container" id="details">
-                <h3 id="details-title">{{ meeting.title }}</h3>
-                <p id="details-content">Select an item from the list to see more details here.</p>
-            </div>
+    </div>
+  </div>
+  <div class="details-container" id="details">
+    <h3 id="details-title">{{ meeting.title }}</h3>
+    <p id="details-content">Select an item from the list to see more details here.</p>
+  </div>
 
-            <!--Modal-->
-                        <div class="modal fade" id="contentDetail">
-                          <div class="modal-dialog">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title">{{ meeting.title }} 전문 보기</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                              </div>
-                              <div class="modal-body" id="modalBody">
-                                {{ meeting.content }}
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-        </div>
+  <!--Modal-->
+  <div class="modal fade" id="contentDetail">
+    <div class="modal-dialog">
+      <div class="modal-content" id="contentModalHtml">
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
 {% endblock %}
 
 {% block script %}
-    <script>
-      let currentItem = null;
+<script>
+  let currentItem = null;
 
-      function toggleDetails1(meeting_id) {
-        const listContainer = document.getElementById('list-container');
-        const detailsContainer = document.getElementById('details');
-        const detailsContent = document.getElementById('details-content');
+  function toggleDetails1(meeting_id) {
+    const listContainer = document.getElementById('list-container');
+    const detailsContainer = document.getElementById('details');
+    const detailsContent = document.getElementById('details-content');
+    const modalContainer = document.getElementById('contentModalHtml');
 
-        if (currentItem === meeting_id) {
-          // Hide the details if the same item is clicked again
-          detailsContainer.classList.remove('open');
-          listContainer.classList.remove('split-view');
-          currentItem = null;
-        } else {
-          // Fetch the meeting details from the server
-          fetch(`/meeting_summary/${meeting_id}/`)
-            .then(response => response.text())
-            .then(html => {
-                // Show the details of the selected item
-                detailsContent.innerHTML = html;
-                detailsContainer.classList.add('open');
-                listContainer.classList.add('split-view');
-                currentItem = meeting_id;
-            });
-        }
-      }
-
-        $("#search-title").click(function () {
-          const query = prompt("검색할 제목을 입력하세요:");
-          if (query) {
-            console.log("제목 검색어:", query);
-            $(".meeting-list")
-              .empty()
-              .append("<div>제목 검색 결과: " + query + "</div>");
-          }
+    if (currentItem === meeting_id) {
+      // Hide the details if the same item is clicked again
+      detailsContainer.classList.remove('open');
+      listContainer.classList.remove('split-view');
+      currentItem = null;
+    } else {
+      // Fetch the meeting details from the server
+      fetch(`/meeting_summary/${meeting_id}/`)
+        .then(response => response.text())
+        .then(html => {
+          // Show the details of the selected item
+          detailsContent.innerHTML = html;
+          detailsContainer.classList.add('open');
+          listContainer.classList.add('split-view');
+          currentItem = meeting_id;
         });
+        fetch(`/meeting_detail/${meeting_id}`)
+          .then(response => response.text())
+          .then(html => {
+            console.log(html)
+            modalContainer.innerHTML = html;
+          });
+    }
+  }
 
-        $("#search-author").click(function () {
-          const query = prompt("검색할 작성자를 입력하세요:");
-          if (query) {
-            console.log("작성자 검색어:", query);
-            $(".meeting-list")
-              .empty()
-              .append("<div>작성자 검색 결과: " + query + "</div>");
-          }
-        });
+  $("#search-title").click(function () {
+    const query = prompt("검색할 제목을 입력하세요:");
+    if (query) {
+      console.log("제목 검색어:", query);
+      $(".meeting-list")
+        .empty()
+        .append("<div>제목 검색 결과: " + query + "</div>");
+    }
+  });
 
-        $("#search-date").click(function () {
-          const query = prompt("검색할 날짜를 입력하세요 (YYYY-MM-DD):");
-          if (query) {
-            console.log("날짜 검색어:", query);
-            $(".meeting-list")
-              .empty()
-              .append("<div>날짜 검색 결과: " + query + "</div>");
-          }
-        });
+  $("#search-author").click(function () {
+    const query = prompt("검색할 작성자를 입력하세요:");
+    if (query) {
+      console.log("작성자 검색어:", query);
+      $(".meeting-list")
+        .empty()
+        .append("<div>작성자 검색 결과: " + query + "</div>");
+    }
+  });
 
-        $("#search-summary").click(function () {
-          const query = prompt("검색할 요약문을 입력하세요:");
-          if (query) {
-            console.log("요약문 검색어:", query);
-            $(".meeting-list")
-              .empty()
-              .append("<div>요약문 검색 결과: " + query + "</div>");
-          }
-        });
+  $("#search-date").click(function () {
+    const query = prompt("검색할 날짜를 입력하세요 (YYYY-MM-DD):");
+    if (query) {
+      console.log("날짜 검색어:", query);
+      $(".meeting-list")
+        .empty()
+        .append("<div>날짜 검색 결과: " + query + "</div>");
+    }
+  });
 
+  $("#search-summary").click(function () {
+    const query = prompt("검색할 요약문을 입력하세요:");
+    if (query) {
+      console.log("요약문 검색어:", query);
+      $(".meeting-list")
+        .empty()
+        .append("<div>요약문 검색 결과: " + query + "</div>");
+    }
+  });
 
-
-    </script>
+</script>
 {% endblock %}
