241031_sa_레코딩 저장 오류 수정

--- a/meeting/templates/meeting.html
+++ b/meeting/templates/meeting.html
@@ -7,7 +7,7 @@
     <p>
       <strong>참여자</strong><br />
       {% for user in users %}
-        {{ user }}
+        {{ user }}<br />
       {% endfor %}
     </p>
     <p>
