--- a/meeting/templates/meeting_detail.html
+++ b/meeting/templates/meeting_detail.html
@@ -16,15 +16,25 @@
 
       <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#speakerSelect">
         <div class="accordion-body">
-          {% for user in users %}
-            <select id="speaker{{ forloop.counter }}" name="speaker{{ forloop.counter }}">
-              <option selected>Select Email</option>
-              {% for user in users %}
-                <option value="{{ user }}">{{ user }}</option>
-              {% endfor %}
-            </select>
-          <br />
-          {% endfor %}
+          <form action="{% url 'speaker' %}" method="POST">
+            {% csrf_token %}
+            {% for speaker in speakers %}
+              <select class="form-select form-select-md" name="selectedValues" onchange="updateOptions()">
+                <option selected>{{ speaker }}</option>
+                {% for user in users %}
+                  {% if user != speaker %}
+                    <option value="{{ user }}">{{ user }}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            <br />
+            {% endfor %}
+
+            <div class="btn-container align-content-end" style="text-align: end;">
+              <button class="btn btn-primary" type="submit">수정</button>
+            </div>
+
+          </form>
         </div>
       </div>
 
