본문이 없을 경우 에러화면이 뜨는  오류 수정

--- a/meeting/templates/meeting_detail.html
+++ b/meeting/templates/meeting_detail.html
@@ -42,8 +42,10 @@
   </div>
   <br />
   <div id="meetingContentJson">
-        {% for minute in meeting.content.minutes %}
-            <p><strong>{{ minute.speaker }}:</strong> {{ minute.text }}</p>
-        {% endfor %}
+        {% if meeting.content.minutes %}
+          {% for minute in meeting.content.minutes %}
+              <p><strong>{{ minute.speaker }}:</strong> {{ minute.text }}</p>
+          {% endfor %}
+        {% endif %}
   </div>
 </div>
