--- a/meeting/templates/meeting.html
+++ b/meeting/templates/meeting.html
@@ -18,7 +18,7 @@
     </p>
 
     <p><strong>회의 요약</strong></p>
-    <p>{{meeting.summary}}</p>
+    <p>{{ meeting.summary|safe }}</p>
     <br>
     <div class="detailMeeting">
       <button type="button" id="open-modal" class="btn" data-bs-toggle="modal" data-bs-target="#contentDetail">전문
