--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -39,17 +39,21 @@
     <div class="create-meeting">
       <a class="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
     </div>
+
     <div id="list-items">
       {% for meeting in meetings %}
-      <div class="list-item" onclick="toggleDetails1('{{ meeting.id }}')">
+      <div class="list-item" onclick="toggleDetails1('{{ meeting.id }}')" {% if forloop.counter > 15 %} style="display: none;" {% endif %}>
         <span class="list-item-title">{{ meeting.title }}</span>
         <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }}<br>{{ meeting.host }}</span>
       </div>
       {% endfor %}
-
-
-
     </div>
+
+  <!-- 더보기 버튼 -->
+    <div class="d-grid">
+        <button id="load-more" class="btn btn-outline-dark">더보기</button>
+    </div>
+
   </div>
   <div class="details-container" id="details">
     <h3 id="details-title">{{ meeting.title }}</h3>
@@ -251,6 +255,27 @@ let selected_speakers = [];  // 선택된 값들을 저장할 리스트
       return cookieValue;
     }
   });
+
+  $(document).ready(function() {
+        var itemsToShow = 15;  // 한 번에 표시할 항목 수
+
+        // 더보기 버튼 클릭 시 추가 항목 표시
+        $('#load-more').click(function() {
+            // 현재 숨겨진 항목 중에서 다음 itemsToShow 개수만큼 선택하여 보여줌
+            var hiddenItems = $('.list-item:hidden').slice(0, itemsToShow);
+
+            // 선택된 숨겨진 항목이 있는지 확인
+            if (hiddenItems.length > 0) {
+                hiddenItems.slideDown();  // 숨겨진 항목을 부드럽게 표시
+            }
+
+            // 더 이상 숨겨진 항목이 없으면 버튼 숨기기
+            if ($('.list-item:hidden').length === 0) {
+                $('#load-more').fadeOut();
+            }
+        });
+    });
+
 </script>
 
 {% endblock %}
