회의록 생성 전 화면 수정

--- a/meeting/templates/meeting_detail.html
+++ b/meeting/templates/meeting_detail.html
@@ -48,7 +48,7 @@
   <br />
   <div id="meetingContentJson">
     {% if not meeting.content %}
-    <p>회의록 생성 중입니다.</p>
+    <h4 class="text-center">회의록 생성 중입니다...</h4>
 
 
     {% elif meeting.content.minutes %}
