--- a/meeting/templates/recording.html
+++ b/meeting/templates/recording.html
@@ -194,6 +194,10 @@
 
     // 모달에서 "예" 버튼을 클릭하면 실행
     document.querySelector('#yes-button').addEventListener('click', async function() {
+        const yesbutton = document.querySelector('#yes-button')
+        yesbutton.setAttribute("disabled", "true")
+        yesbutton.innerHTML = `<span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                                <span class="visually-hidden" role="status">Loading...</span>`
 
         const meetingNameInput = document.getElementById('title_input_element');
         const meetingName = meetingNameInput.value;
