--- a/meeting/static/meeting/css/base.css
+++ b/meeting/static/meeting/css/base.css
@@ -3,7 +3,8 @@ html, body {
   background-color: #f8f9fa;
 }
 .main-container {
-  min-height: 98vh;
+  min-height: 93vh;
+  padding: 20px;
 }
 .header {
   display: flex;
@@ -21,12 +22,8 @@ html, body {
   border-radius: 5px;
   font-weight: bold;
 }
-.footer {
-  width: 100%;
-  height: 99999px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+footer {
+  background-color: #051c4f;
 }
 
 
