--- a/meeting/static/meeting/css/main.css
+++ b/meeting/static/meeting/css/main.css
@@ -1,25 +1,25 @@
 .meeting-list {
+  width: 100%;
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  transition: width 0.3s ease-out;
+}
+.meeting-list.split-view {
+  width: 35%;
 }
 .list-container {
   width: 100%;
   border-right: 1px solid #ccc;
   overflow-y: auto;
   padding: 10px;
-  transition: width 0.5s ease;
-}
-.list-container.split-view {
-  width: 50%;
 }
 .details-container {
-  width: 50%;
+  width: 0%;
   padding: 20px;
-  display: none;
+  visibility: hidden;
   background-color: #f4f4f4;
-  transition: transform 0.5s ease;
+  transition: all 0.3s ease-out;
   position: fixed;
   top: 0;
   right: 0;
@@ -29,6 +29,8 @@
 }
 .details-container.open {
   display: flow;
+  visibility: visible;
+  width: 63%;
 }
 .list-item {
   display: flex;
