--- a/meeting/static/meeting/css/recording.css
+++ b/meeting/static/meeting/css/recording.css
@@ -18,9 +18,6 @@
 .listening-container {
     margin-top: 10vh;
     margin-bottom: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 .listening-text {
     margin-left: 10px;
@@ -36,8 +33,6 @@
     background-color: #ff6b6b;
     border: none;
     color: white;
-    padding: 10px 20px;
-    font-size: 1rem;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 50px;
@@ -52,8 +47,13 @@
 }
 
 .modal-dialog {
+  min-width: 30%;
   padding: 20px;
   font-weight: bold; /* 모든 텍스트를 볼드로 설정 */
+}
+
+.modal-content {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
 .modal-header, .modal-footer {
@@ -84,7 +84,12 @@
 }
 
 .modal-footer {
+  justify-content: center;
   padding: 10px 20px; /* 푸터 패딩 조정 */
+}
+
+.modal-footer button {
+  width:120px;
 }
 
 .modal-text {
@@ -99,16 +104,6 @@ border: none;
 .btn-secondary {
 background-color: #6c757d;
 border: none;
-}
-.end-meeting-btn {
-position: absolute;
-bottom: 20px;
-background-color: #dc3545;
-border: none;
-color: white;
-padding: 10px 20px;
-border-radius: 5px;
-cursor: pointer;
 }
 .NickName-chip {
 display: inline-block;
